--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,72 @@
 .nav-item {
   display: inline-block;
 }
+
+html {
+  height: 100%;
+  background: linear-gradient(to bottom, #ff9966 0%, #ccff33 100%);
+}
+
+header {
+  display: flex;
+  border: 1px solid black;
+  border-radius: 10em;
+  background-color: #ff9999;
+}
+
+header nav {
+  margin-top: .7em;
+}
+
+header nav p {
+  display: inline;
+  justify-content: flex-end;
+}
+
+a {
+  text-decoration: none;
+}
+
+.cart {
+  text-align: right;
+}
+
+.col-sm-4 {
+  display: flex;
+}
+
+.button {
+  border: 2px solid blue;
+  border-radius: 20px;
+  background-color: #ff3333;
+  text-align: center;
+  padding: 20px 20px;
+  font-family: "Montserrat";
+  color: white;
+  font-weight: bold;
+  position: relative;
+  font-size: 1em;
+}
+
+.button:active {
+  top: .5em;
+}
+
+.items {
+  background-color: #b3b3ff;
+  margin-top: 1em;
+  display: inline-grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 97%;
+  align-content: space-around;
+  padding: 1em;
+  border-radius: 20px;
+  grid
+}
+
+.it {
+  background-color: beige;
+  box-shadow: 0px 0px 2px black;
+  border: 1px solid black;
+  text-align: center;
+}
