--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,19 @@
-# Empty CSS file for your own CSS
-
-.nav-item {
-  display: inline-block;
-}
+/* Background colorsA*/
 
 html {
   height: 100%;
   background: linear-gradient(to bottom, #ff9966 0%, #ccff33 100%);
 }
 
+
+/*NavBar*/
+
 header {
   display: flex;
   border: 1px solid black;
   border-radius: 10em;
   background-color: #ff9999;
+  margin-bottom: 1em;
 }
 
 header nav {
@@ -33,10 +33,6 @@ a {
   text-align: right;
 }
 
-.col-sm-4 {
-  display: flex;
-}
-
 .button {
   border: 2px solid blue;
   border-radius: 20px;
@@ -50,11 +46,41 @@ a {
   font-size: 1em;
 }
 
+.button:hover {
+  cursor: pointer;
+}
+
 .button:active {
   top: .5em;
 }
 
-.items {
+/* Footer */
+
+footer {
+  display: flex;
+  text-align: right;
+  background-color: #ff9999;
+  border: 1px solid black;
+  border-radius: 10em;
+  margin-top: 1em;
+}
+
+#logo {
+  width: 10em;
+}
+
+footer a img {
+  width: 100%;
+  margin-top: .7em;
+}
+
+footer h4 {
+  margin-right: 1em;
+  margin-left: 1em;
+  font-family: "Montserrat";
+}
+
+.grid {
   background-color: #b3b3ff;
   margin-top: 1em;
   display: inline-grid;
@@ -63,12 +89,39 @@ a {
   align-content: space-around;
   padding: 1em;
   border-radius: 20px;
-  grid
 }
 
-.it {
+.item {
   background-color: beige;
   box-shadow: 0px 0px 2px black;
   border: 1px solid black;
   text-align: center;
+}
+
+.main {
+  background: white;
+  box-shadow: 1px 1px 10px #6699ff;
+  width: 95%;
+  margin: auto;
+  padding: .1em;
+}
+
+.sub {
+  margin: 0;
+  background-color: white;
+  padding-left: .5em;
+}
+
+.heading {
+  width: 100%;
+  height: 100%;
+  background-color: #ffa64d;
+  width: 95%;
+  margin: auto;
+  padding: .1em;
+  box-shadow: 1px 1px 10px #6699ff;
+}
+
+.heading h2 {
+  margin-left: .5em;
 }
