--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 html {
   height: 100%;
-  background: linear-gradient(to bottom, #ff9966 0%, #ccff33 100%);
+  background: linear-gradient(to bottom, #66ccff 0%, #ff9966 100%);
 }
 
 
@@ -14,6 +14,7 @@ header {
   border-radius: 10em;
   background-color: #ff9999;
   margin-bottom: 1em;
+  box-shadow: 5px 5px 10px #0099e6;
 }
 
 header nav {
@@ -28,13 +29,24 @@ header nav p {
 a {
   text-decoration: none;
 }
-
+/*
 .cart {
   text-align: right;
+  display: flex;
+  opacity: .5;
+  background-color: white;
 }
 
+.cart img {
+  display: inline-block;
+  opacity: .5;
+  width: 2em;
+  height: auto;
+}
+*/
+
 .button {
-  border: 2px solid blue;
+  box-shadow: 5px 5px 10px #ff3333;
   border-radius: 20px;
   background-color: #ff3333;
   text-align: center;
@@ -54,6 +66,7 @@ a {
   top: .5em;
 }
 
+
 /* Footer */
 
 footer {
@@ -63,6 +76,7 @@ footer {
   border: 1px solid black;
   border-radius: 10em;
   margin-top: 1em;
+  box-shadow: 5px 5px 10px #0099e6;
 }
 
 #logo {
@@ -80,6 +94,56 @@ footer h4 {
   font-family: "Montserrat";
 }
 
+/* General */
+
+p {
+  font-family: "Noto Serif";
+  margin: .5em 0 .5em 0;
+  line-height: 1.2;
+  font-size: .9em;
+}
+
+table {
+  width: 100%;
+  text-align: center;
+}
+
+h2 {
+  font-family: "Noto Serif";
+}
+
+.main {
+  background: white;
+  box-shadow: 1px 1px 10px #6699ff;
+  width: 95%;
+  margin: auto;
+  padding: .1em;
+  border-radius: 0 0 15px 15px;
+}
+
+.sub {
+  margin: 0;
+  background-color: white;
+  padding-left: .5em;
+}
+
+.heading {
+  width: 100%;
+  height: 100%;
+  background-color: #ff9999;
+  width: 95%;
+  margin: auto;
+  padding: .1em;
+  box-shadow: 1px 1px 10px #6699ff;
+  border-radius: 15px 15px 0 0;
+}
+
+.heading h2 {
+  margin-left: .5em;
+}
+
+/* Homepage */
+
 .grid {
   background-color: #b3b3ff;
   margin-top: 1em;
@@ -96,32 +160,4 @@ footer h4 {
   box-shadow: 0px 0px 2px black;
   border: 1px solid black;
   text-align: center;
-}
-
-.main {
-  background: white;
-  box-shadow: 1px 1px 10px #6699ff;
-  width: 95%;
-  margin: auto;
-  padding: .1em;
-}
-
-.sub {
-  margin: 0;
-  background-color: white;
-  padding-left: .5em;
-}
-
-.heading {
-  width: 100%;
-  height: 100%;
-  background-color: #ffa64d;
-  width: 95%;
-  margin: auto;
-  padding: .1em;
-  box-shadow: 1px 1px 10px #6699ff;
-}
-
-.heading h2 {
-  margin-left: .5em;
 }
