--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 html {
   height: 100%;
-  background: linear-gradient(to bottom, #66ccff 0%, #ff9966 100%);
+  background: linear-gradient(to bottom, #b3b3ff 0%, #66ffff 100%);
 }
 
 
@@ -14,7 +14,7 @@ header {
   border-radius: 10em;
   background-color: #ff9999;
   margin-bottom: 1em;
-  box-shadow: 5px 5px 10px #0099e6;
+  box-shadow: 5px 5px 10px #8080ff;
 }
 
 header nav {
@@ -99,14 +99,33 @@ footer h4 {
 p {
   font-family: "Noto Serif";
   margin: .5em 0 .5em 0;
-  line-height: 1.2;
+  line-height: 1.2em;
   font-size: .9em;
 }
 
 table {
   width: 100%;
   text-align: center;
+  border: .01em solid black;
+  margin: auto;
+  border-collapse: collapse;
 }
+
+tr {
+  line-height: 1.5em;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+th {
+  background-color: #bfbfbf;
+}
+
+
+
+
 
 h2 {
   font-family: "Noto Serif";
@@ -141,6 +160,16 @@ h2 {
 .heading h2 {
   margin-left: .5em;
 }
+
+ol, ul {
+  line-height: 2em;
+}
+
+img {
+  display: block;
+  margin: auto;
+}
+
 
 /* Homepage */
 
