--- a/css/style.css
+++ b/css/style.css
@@ -199,3 +199,49 @@ img {
   border: 1px solid black;
   text-align: center;
 }
+
+.w3-button {
+  border: none;
+  display: inline-block;
+  padding: 8px 16px;
+  vertical-align: middle;
+  overflow: hidden;
+  text-decoration: none;
+  color: inherit;
+  background-color: inherit;
+  text-align: center;
+  cursor: pointer;
+  white-space: nowrap;
+}
+
+.w3-display-right {
+  position: static;
+  top: 50%;
+  right: 0%;
+  /*transform: translate(0%,-50%);
+  -ms-transform: translate(0%,-50%);*/
+}
+
+.w3-display-left {
+  position: static;
+  top: 50%;
+  left: 0%;
+  /*
+  transform: translate(0%,-50%);
+  -ms-transform: translate(0%,-50%);*/
+}
+
+.slideGroup {
+  display: none;
+  width: auto;
+  height: auto;
+  background-color: white;
+}
+
+.slides {
+  text-align: center;
+  width: 24em;
+  margin: auto;
+  display: inline-block;
+  font-family: "Noto Serif";
+}
