--- a/css/style.css
+++ b/css/style.css
@@ -35,14 +35,16 @@ a {
   text-align: right;
   display: inline-flex;
   opacity: .7;
+  height: 1em;
+  width: auto;
 
 }
 
 .cart img {
   display: inline-block;
-  opacity: .5;
   width: auto;
-  height: 5em;
+  height: 1em;
+  width: auto;
   float: right;
 }
 
