--- a/css/style.css
+++ b/css/style.css
@@ -282,3 +282,22 @@ img {
 }
 
 /*Build a Bag*/
+
+#buildabagLayout {
+  display: grid;
+  grid-template-columns: 4fr 1fr;
+  grid-template-rows: 2fr 1fr 2fr;
+}
+
+.priceTracker {
+  width: 95%;
+  height: 20em;
+  background-color: #ebebe0;
+  border-left: 1px solid black;
+  border-radius: 1em;
+  padding: .1em;
+  box-shadow: 1px 1px 4px black;
+  grid-row-start: 1;
+  grid-row-end: 4;
+  grid-column: 2;
+}
