--- a/css/style.css
+++ b/css/style.css
@@ -326,12 +326,28 @@ img {
 .itemGrid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: .1fr 1fr 1fr 1fr 1fr 1fr;
+  text-align: center;
 }
 
-.itemGrid h4 {
+.itemType {
   grid-column-start: 1;
-  grid-column-end: 3;
+  grid-column-end: 4;
   grid-row-start: 1;
+  text-align: left;
+  margin: .5em;
+}
 
+.BABItem h4,
+.BABItem h5 {
+  margin: 0 auto;
+}
+
+.BABItem img {
+  height: 8em;
+  width: auto;
+}
+
+.addToBag {
+  
 }
