--- a/css/style.css
+++ b/css/style.css
@@ -320,7 +320,7 @@ img {
 #buildabagLayout {
   display: grid;
   grid-template-columns: 4fr 1fr;
-  grid-template-rows: 20em 10fr 20fr;
+  grid-template-rows: 1fr 5fr 2fr 5fr;
 }
 
 .instructions {
@@ -352,9 +352,10 @@ img {
 }
 
 .itemGrid {
+  border-top: 1px solid grey;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: .1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: .3fr 1fr 1fr 1fr 1fr 1fr;
   text-align: center;
 }
 
@@ -371,13 +372,14 @@ img {
   margin: 0 auto;
 }
 .BABItem img {
-  height: 8em;
+  height: 5em;
   width: auto;
 }
 
-.addToBag {
-}
-
-button.login{
-
+#ribbonGrid {
+  border-top: 1px solid grey;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: .3fr 12em 12em;
+  text-align: center;
 }
