--- a/css/style.css
+++ b/css/style.css
@@ -265,6 +265,8 @@ img {
     border-radius: 4em;
 }
 
+
+
 .itemName {
   font-size: 1.2em;
   display: inline-block;
@@ -289,7 +291,7 @@ img {
 .item img {
   display: inline-block;
   margin: 0;
-  height: 100%;
+  height: 9em;
   width: auto;
   border-radius: 1em;
 }
