--- a/css/style.css
+++ b/css/style.css
@@ -271,8 +271,8 @@ img {
 .item img {
   display: inline-block;
   margin: 0;
-  height: 9em;
-  width: auto;
+  height: auto;
+  width: 9em;
   border-radius: 1em;
 }
 
@@ -331,6 +331,15 @@ img {
 
 .priceTracker h5 {
   margin-left: 1.3em;
+}
+
+.priceTracker h4 {
+  margin-bottom: .1em;
+}
+
+.priceTracker button {
+  background: inherit;
+  font-family: "Noto Serif";
 }
 
 .itemGrid {
