--- a/css/style.css
+++ b/css/style.css
@@ -271,8 +271,8 @@ img {
 .item img {
   display: inline-block;
   margin: 0;
-  height: 9em;
-  width: auto;
+  height: auto;
+  width: 9em;
   border-radius: 1em;
 }
 
