--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,3 @@
-/* Background colors*/
-
-html {
-  length: auto;
-  background: linear-gradient(to bottom, #b3b3ff 0%, #66ffff 100%);
-}
-
 /*NavBar*/
 
 header {
@@ -114,6 +107,12 @@ footer h4 {
 
 /* General */
 
+html {
+  length: auto;
+  background: linear-gradient(to bottom, #b3b3ff 0%, #66ffff 100%);
+  scroll-behavior: smooth;
+}
+
 p {
   font-family: "Noto Serif";
   margin: .5em 0 .5em 0;
@@ -162,6 +161,16 @@ ol, ul {
 img {
   display: block;
   margin: auto;
+}
+
+input {
+  font-size: 2em;
+  width: 2em;
+  float: right;
+  position: relative;
+  right: 4em;
+  top: 3em;
+  background: #e6e6e6;
 }
 
 /* Homepage */
@@ -228,6 +237,16 @@ img {
   margin: auto;
   display: inline-block;
   font-family: "Noto Serif";
+  display: inline;
+}
+
+.slides ul {
+  display: inline-block;
+}
+
+.slides ul li{
+  font-size: 1em;
+  text-align: left;
 }
 
 /*Premade Bags and Wholesale Bags*/
@@ -292,9 +311,10 @@ img {
   color: white;
   font-family: "Montserrat";
   text-align: center;
+  float: right;
   position: relative;
-  left: 60em;
-  bottom: 5em;
+  top: 2em;
+  right: 1em;
 }
 
 /*Build a Bag*/
@@ -376,6 +396,8 @@ img {
   grid-template-rows: .3fr 12em 12em;
   text-align: center;
 }
+
+
 
 /*Shipping Page*/
 
