--- a/css/style.css
+++ b/css/style.css
@@ -64,9 +64,10 @@ a {
   border-radius: 1em;
   width: 30em;
   position: absolute;
-  top: 4em;
+  top: 6em;
   right: 1em;
   display: none;
+  z-index: 1;
 }
 
 .button {
