--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,8 @@ a {
   font-weight: bold;
   position: relative;
   font-size: 1em;
+  width: 11em;
+  margin-left: 5em;
 }
 
 .button:hover {
@@ -203,7 +205,7 @@ input {
 }
 
 .cell {
-  background-color: beige;
+  background-color: white;
   box-shadow: 0px 0px 2px black;
   border: 1px solid black;
   text-align: center;
