--- a/css/style.css
+++ b/css/style.css
@@ -233,40 +233,52 @@ input {
   position: static;
   top: 50%;
   right: 0%;
+  border-radius: 0 0 1em 0;
 }
 
 .display-left {
   position: static;
   top: 50%;
   left: 0%;
+  border-radius: 0 0 0 1em;
 }
 
 .slideGroup {
   position: relative;
-  left: 2.9em;
+  left: 2.8em;
   display: inline-grid;
   width: 95%;
   height: auto;
   background-color: white;
-  margin: 1em auto;
+  margin-bottom: 1em;
   grid-template-columns: 1fr 2fr 2fr 2fr 1fr;
   align-content: space-between;
+  box-shadow: 1px 1px 3px;
+  border-radius: 0 0 1em 1em ;
 }
 
 .slides {
-  text-align: center;
   width: 33%;
   display: inline-block;
   font-family: "Noto Serif";
   display: inline;
-  position: relative;
-  left: 8em;
+  justify-self: center;
+  text-align: center;
 }
 
 .slides img {
-  height: 5em;
+  height: 10em;
   width: auto;
+  margin: 1em auto;
+  align: center;
 }
+
+.slides h4 {
+  width: auto;
+  margin: 0;
+}
+
+
 
 /*Premade Bags and Wholesale Bags*/
 
