--- a/css/style.css
+++ b/css/style.css
@@ -62,12 +62,14 @@ a {
   background-color: white;
   border: 2px solid red;
   border-radius: 1em;
-  width: 30em;
+  width: 20em;
+  height: 20em;
   position: absolute;
   top: 6em;
   right: 1em;
   display: none;
   z-index: 1;
+  overflow: scroll;
 }
 
 .button {
@@ -294,6 +296,8 @@ input {
     width: 96.5%;
     border-radius: 4em;
     height: 12.5em;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 
