--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,6 @@ a {
 .cartDiv {
   background-color: white;
   border: 2px solid red;
-  border-radius: 1em;
   width: 20em;
   height: 20em;
   position: absolute;
@@ -67,7 +66,7 @@ a {
   right: 1em;
   display: none;
   z-index: 1;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 .button {
@@ -113,6 +112,12 @@ a {
   top: .5em;
 }
 
+.remove {
+  border-radius: 1em;
+  background: linear-gradient(to bottom, #ff6666, #ff9999);
+  cursor: pointer;
+  color: black;
+}
 
 /* Footer */
 
@@ -492,7 +497,6 @@ input {
 }
 
 .priceTracker button {
-  background: inherit;
   font-family: "Noto Serif";
 }
 
